virtualservice.yaml
# https://github.com/kubeflow/website/blob/master/content/en/docs/components/central-dash/customize.md

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test
  namespace: default
spec:
  gateways:
  ## the istio gateway which is serving kubeflow
  ## TEMPLATE: <KUBEFLOW_GATEWAY_NAMESPACE>/<KUBEFLOW_GATEWAY_NAME>
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /google/
    route:
    - destination:
        host: https://google.com

---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  # - api.dropboxapi.com
  # - www.googleapis.com
  # - api.facebook.com
  - google.com
  location: MESH_EXTERNAL
  ports:
  # - number: 80
  #   name: http
  #   protocol: TLS
  - number: 443
    name: https
    protocol: TLS
  resolution: DNS
